# python-web-module-8-9

./: README.md  config.py  connect.py  find_quote.py  models.py  pyproject.toml  seed.py
data/: authors.json
part1/: config.py  models.py  seed.py
part2/: config.py  connect.py  consumer_email.py  consumer_sms.py  models.py  producer.py
spiders/: quotes_spider.py
