[tool.poetry]
name = "python-web-module-8"
version = "0.1.0"
description = ""
authors = ["Artem <artem.zimovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
pymongo = {extras = ["srv", "tls"], version = "^4.6.3"}
resid = "^0.0.3"
redis = "^5.0.3"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^24.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
